syntax = "proto3";
package GreeterCenter;

message BreakfastRequestMessage {
	string name = 1;
}

message BreakfastResponseMessage {
	string msg = 1;
	int32 code=2;
	string data=3;
}

message LunchRequestMessage {
	string name = 1;
}

message LunchResponseMessage {
	string msg = 1;
	int32 code=2;
	string data=3;
}
message DinnerRequestMessage {
	string name = 1;
}

message DinnerResponseMessage {
	string msg = 1;
	int32 code=2;
	string data=3;
}

service Eat {
	rpc Breakfast(BreakfastRequestMessage) returns (BreakfastResponseMessage) {}
	rpc Lunch(LunchRequestMessage) returns (LunchResponseMessage) {}
	rpc Dinner(DinnerRequestMessage) returns (DinnerResponseMessage) {}
}

